# StoreAPI_DIO

./: docker-compose.yml  pyproject.toml
store/controllers/: product.py
store/models/: base.py  product.py
store/schemas/: base.py  product.py
store/usecases/: product.py
tests/: confitest.py  factories.py
tests/controllers/: test_product.py
tests/schemas/: test_product.py
tests/usecases/: test_product.py
